# Charlie-BU

./: .gitignore  README.md  package.json  test.md
BE-Charlie/: AI.py  LLM.py  alembic.ini  app.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt  run_dev.sh  utils.py
BE-Charlie/alembic/versions/: 1bdcd277394e_init.py  217c8571ee06_init.py  2b45473570b0_init.py  4aef81a6fad9_init.py  4c51474cf1d4_init.py  599dc70a717f_m.py  684c5542895e_m.py  792b3312ad9c_.py  7cca10ff70dd_init.py  98ba519eb2da_m.py  acedb14ea235_m.py
BE-Charlie/heic-to-jpg/: main.py
BE-Charlie/migrations/: alembic.ini  env.py
BE-Charlie/migrations/versions/: 18c576dba598_.py  9e5927639050_m.py  acedb14ea235_.py  b4583bdfb0a8_m.py  e17cc8215755_.py
BE-Charlie/subRouters/: api.py  article.py  dating.py
FE-Charlie/: .env  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
FE-Charlie/src/: App.vue  main.ts  style.css
FE-Charlie/src/api/: request.ts  services.ts
FE-Charlie/src/assets/styles/: buttons.css
FE-Charlie/src/components/: Article.vue  ArticleEditor.vue  Footer.vue  Home.vue  Login.vue  Modal.vue  NavBar.vue  Traveling.vue
FE-Charlie/src/components/Article/: ArticleEditor.vue  index.css  index.vue
FE-Charlie/src/components/Dating/: Activities.vue  Anniversary.vue  Diary.vue  Gallery.vue  PeriodTracker.vue  index.vue
FE-Charlie/src/components/mindroom/: Mindroom.vue
FE-Charlie/src/hooks/: useModal.ts
FE-Charlie/src/router/: index.ts
FE-Charlie/src/utils/: map.ts  markdown.ts  markdownImageReplacer.ts  utils.ts
(+2 files in other folders)
